<resources>
    <string name="title_book">できる日本語</string>
    <string name="title_book_vn">Tiếng Nhật trong tầm tay</string>
    <string name="app_name">Dekiru Nihongo</string>
    <string name="vocabulary">Từ vựng</string>
    <string name="grammar">Ngữ pháp</string>
    <string name="listen">Nghe</string>
    <string name="kanji">Kanji</string>
    <string name="quiz">Kiểm tra</string>
    <string name="flashcards">Flashcards</string>
    <string name="learn">Learn</string>
    <string name="speller">Speller</string>
    <string name="title_activity_lesson">LessonActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="book_1">しょきゅう</string>
    <string name="book_2">しょちゅうきゅう</string>
    <string name="book_3">ちゅうきゅう</string>
    <string name="about">Thông tin và cài đặt</string>
    <string name="book">Quyển</string>
    <string name="lesson">Bài</string>
    <string name="correct">Kết quả</string>
    <string name="CORRECT">ĐÚNG KẾT QUẢ</string>
    <string name="INCORRECT">SAI KẾT QUẢ</string>
    <string name="answer">Nhập câu trả lời</string>
    <string name="title_activity_lean_vocabulary">LeanVocabulary</string>
    <string name="title_activity_about">Thông tin</string>
    <string name="title_activity_grammar">GrammarActivity</string>
    <string name="title_activity_search_result">SearchResult</string>
    <string name="learn_vocabulary">Học Từ Vựng</string>
    <string name="start_over">Bắt đầu lại</string>
    <string name="next">Tiếp theo</string>
    <string name="back">Trở lại</string>
    <string name="title_activity_kanji">KanjiActivity</string>
    <string name="title_kanji">Phát âm và từ ghép</string>
    <string name="title_gram">Giải thích và ví dụ</string>
    <string name="title_about_info">Giới thiệu</string>
    <string name="title_about_setting">Cài đặt</string>
    <string name="title_about_info_team">Thông tin</string>
    <string name="title_about_note">Lưu ý</string>
    <string name="welcome">ようこそ!できるにほんごです。  </string>
    <string name="linktts">https://play.google.com/store/apps/details?id=com.google.android.tts</string>
    <string name="link_input">https://play.google.com/store/apps/details?id=com.google.android.inputmethod.japanese</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_note">Note</string>
    <string name="about_info">\n\t\t\tDekiru Nihongo là một ứng dụng được viết để giúp đỡ các bạn sinh viên học tiếng Nhật ở trường Đại học
    FPT nói chung và sinh viên khối ngành SE nói riêng. Ứng dụng được phát triển bởi HMĐQ Team gồm các thành viên thuộc câu lạc bộ JS -
        Kĩ sư cầu nối Nhật Bản.\n\n
    \t\t\tỨng dụng bao gồm hệ thống các bài học trong sách Dekiru Nihongo, là giáo trình được giảng dạy tại ĐH FPT và gồm các phần Từ vựng,
    Ngữ pháp, Kanji và Kiểm tra.\n\n
    \t\t\tỞ phần từ vựng có các tùy chọn để luyện tập và học thuộc từ mới một cách dễ dàng nhất. Ngoài ra ứng dụng còn hỗ trợ phát âm các từ vựng.\n\n
    \t\t\tĐể có thể sử dụng tính năng này, bạn cần cài đặt Text To Speech (chuyển văn bản sang giọng nói), bạn có thể xem hướng dẫn chi tiết ở phần Cài đặt.\n\n
        \t\t\tỞ phần Ngữ pháp và Kanji thì mỗi bài đều có một lượng kiến thức nhất định trong sách và đã được giải thích bằng tiếng Việt, có ví dụ minh họa cho dễ hiểu.\n\n
        \t\t\tPhần Kiểm tra thì ứng dụng hỗ trợ các bạn luyện tập với một số câu hỏi trắc nghiệm bám sát bài học để các bạn có thể ôn tập và nắm vững kiến thức.\n\n
        \t\t\tVới những chức năng được xây dựng hoàn toàn phục vụ sinh viên học tập tiếng Nhật, đội ngũ Developer mong muốn tất cả các sinh viên đều có thể Passed các môn Nhật
        đều đều. Chúc các bạn trải nghiệm Ứng dụng thật vui vẻ và hữu ích.\n
    </string>
    <string name="about_setting">\n\t\t\tĐể sử dụng ứng dụng đầy đủ chức năng chúng ta cần cài đặt một số phần mềm hỗ trợ như sau.\n\n
    \t\t\t- Đầu tiên bạn cần cài \"Google Text To Speech( Chuyển văn bản thành giọng nói của Google)\", link trực tiếp từ Google Play được đặt ở ngay cuối trang. Sau khi cài đặt xong:\n
        \t\t\t\tB1: Các bạn vào Setting -> Language and Input
        (Ngôn ngữ và bàn phím) -> Text To Speech (Chuyển văn bản sang giọng nói).\n
        \t\t\t\tB2: Chuyển dấu tích sang Google Text To Speech (Chuyển văn bản sang giọng nói của Google). Rồi ấn vào icon setting của lựa chọn này.\n
        \t\t\t\tB3: Các bạn lựa chọn ngôn ngữ là Japanese.\n
        \t\t\t\tB4: Setting voice Data ( Cài đặt dữ liệu thoại), kéo xuống chọn Japanese và tải xuống Voice của ngôn ngữ này.\n
        \t\t\t\tB5: Sau đó bạn trở lại cài đặt Text To Speech và chọn Listen to an example để nghe ví dụ.\n\n
    \t\t\t- Tiếp theo bạn cần cài đặt bàn phím tiếng Nhật để gõ được tiếng Nhật trong ứng dụng cũng như các mục đích học tập tiếng Nhật khác.
        Link trực tiếp từ Google Play được đặt ở ngay cuối trang. Sau khi cài đặt xong:\n
        \t\t\t\tB1: Các bạn vào Setting -> Language and Input
        (Ngôn ngữ và bàn phím) -> Tích vào ô của Google Japanese Input để kích hoạt bàn phím.\n
        \t\t\t\tB2: Các bạn ấn vào setting của Google Japanese Input để cài đặt.\n
        \t\t\t\tB3: Ngay ở Keyboard layout các bạn chuyển sang dạng QWERTY để dễ dùng. Sau đó ấn vào SoftWare keyboard advance...\n
        \t\t\t\tB4: Ở phần Software keyboard preferences for portrait mode các bạn chỉnh layout sang QWERTY và kéo xuống phần
        Software keyboard preferences for landscape mode, tắt tích use portrait setting đi và cũng chỉnh layout lại thành QWERTY.\n\n
        \t\t\t\tHoàn thành, lúc nào cần nhập tiếng Nhật các bạn chỉ cần chọn bàn phím tiếng Nhật và dùng thôi.
        Như vậy là các bạn đã hoàn thành phần cài đặt phần bổ trợ, bây giờ thì hãy trải nghiệm ứng dụng thôi nào!
    </string>
    <string name="about_info_team">
<![CDATA[
<font color=#00a17e>Supporter :</font> <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lê Tuấn Anh </div><div><br></div><div>   <font color=#00a17e> Leader: </font></div><div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Phan Minh Dương </div><div><br></div><div><font color=#00a17e>    Member:</font> </div><div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Trần Minh Quang </div><div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Nguyễn Đức Minh </div><div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Huỳnh Phương Hà </div><div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dắn Thị Thu Hương </div>
]]>
</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
