<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_remain" />

        <TextView
            android:id="@+id/tvNumRemain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_correct" />

        <TextView
            android:id="@+id/tvNumCor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_incorrect" />

        <TextView
            android:id="@+id/tvNumIncor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCheckInOrCorLearn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:autoText="false"
            android:capitalize="words"
            android:clickable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtTuLearn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/edt_ans"
                android:hint="@string/answer"
                android:longClickable="false"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:singleLine="true"
                android:textIsSelectable="false"
                android:textSize="20dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvNghiaLearn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvWriteTuLearn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStartOverLearn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button2"
            android:text="@string/start_over" />

        <Button
            android:id="@+id/btnNextLearn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_weight="1"
            android:background="@drawable/button2"
            android:text="@string/next" />
    </LinearLayout>


</LinearLayout>